--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="main">
         <div class="cursor"></div>
-        <h1>Shashank</h1>
+        <h1>Shashank Gupta</h1>
     </div>
     <script src="script.js"></script>
 </body>
