--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stylish Cursor</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="icons8-star-50.png" type="image/x-icon">
+
 </head>
 <body>
     <div id="main">
